--- a/vercel.json
+++ b/vercel.json
@@ -1,82 +1,12 @@
 {
-  "version": 2,
-  "name": "levelup",
-  "alias": ["levelup-app"],
-  "build": {
-    "env": {
-      "NODE_ENV": "production",
-      "GENERATE_SOURCEMAP": "false",
-      "INLINE_RUNTIME_CHUNK": "false",
-      "DISABLE_ESLINT_PLUGIN": "true"
-    }
-  },
+  "framework": "create-react-app",
   "buildCommand": "npm run build",
   "outputDirectory": "build",
-  "installCommand": "npm install --production=false",
-  "framework": "create-react-app",
-  "regions": ["icn1", "sin1"],
-  "functions": {
-    "src/pages/**": {
-      "maxDuration": 30
-    }
-  },
+  "installCommand": "npm install --force",
   "routes": [
     {
-      "src": "/static/(.*)",
-      "headers": {
-        "cache-control": "public, max-age=31536000, immutable"
-      }
-    },
-    {
-      "src": "/service-worker.js",
-      "headers": {
-        "cache-control": "public, max-age=0, must-revalidate"
-      }
-    },
-    {
-      "src": "/manifest.json",
-      "headers": {
-        "content-type": "application/manifest+json",
-        "cache-control": "public, max-age=86400"
-      }
-    },
-    {
       "src": "/(.*)",
-      "dest": "/index.html",
-      "headers": {
-        "X-Content-Type-Options": "nosniff",
-        "X-Frame-Options": "DENY",
-        "X-XSS-Protection": "1; mode=block",
-        "Referrer-Policy": "same-origin",
-        "Permissions-Policy": "camera=(), microphone=(), geolocation=()"
-      }
-    }
-  ],
-  "headers": [
-    {
-      "source": "/(.*)",
-      "headers": [
-        {
-          "key": "X-Content-Type-Options",
-          "value": "nosniff"
-        },
-        {
-          "key": "X-Frame-Options", 
-          "value": "DENY"
-        },
-        {
-          "key": "X-XSS-Protection",
-          "value": "1; mode=block"
-        },
-        {
-          "key": "Referrer-Policy",
-          "value": "same-origin"
-        },
-        {
-          "key": "Permissions-Policy",
-          "value": "camera=(), microphone=(), geolocation=()"
-        }
-      ]
+      "dest": "/index.html"
     }
   ]
 }
